--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <p data-T>Your hop-wallet is continuously watched here, and once on-chain deposit makes its balance no less than 0.0002 BCH, these funds will be transferred to smartBCH automatically. //您的Hop钱包将在此被持续地监控，一旦链上充值使它的余额不小于0.0002 BCH，则这些资金将被自动传送至smartBCH。</p>
     <div id="inHistory">
       <center><button class="button is-success is-light is-small" onclick="showInHistoryList()" 
-	id="inHistoryBtn" data-T>Cross-chain Transfer History//跨链转账历史</button></center>
+	id="inHistoryBtn" data-T>Cross-chain Transfer History (latest 20)//跨链转账历史（最近20条）</button></center>
       <div id="inHistoryList"></div>
     </div>
     <div id="inProgress"></div>
@@ -288,7 +288,8 @@ async function showCCTransLogs(divId, provider, ccTargetAddr, fromBlock) {
 	filter.fromBlock = fromBlock;
 	var logs = await provider.getLogs(filter);
 	//console.log("found logs", logs);
-	for(var i=logs.length-1; i>=0; i--) {
+	const end = Math.max(0, logs.length-20) // at most 20 entries
+	for(var i=logs.length-1; i>=end; i--) {
 		const h = logs[i].blockNumber
 		fromBlock = h + 1;
 		const amount = ethers.utils.formatUnits(logs[i].data);
