--- a/index.html
+++ b/index.html
@@ -315,11 +315,15 @@ function AddToDiv(divId, text, linkNode) {
 // Show historical cross-chain transfer history in the "inHistoryList" Div
 async function showInHistoryList() {
 	document.getElementById("inHistoryBtn").disabled = true; //disable it to prevent the user clicking again
-	document.getElementById("inHistoryList").innerHTML = "";
+	var inHistoryList = document.getElementById("inHistoryList");
+	inHistoryList.innerHTML = "";
 	const provider = new ethers.providers.Web3Provider(window.ethereum);
 	const signer = provider.getSigner();
 	const ccTargetAddr = await signer.getAddress();
 	await showCCTransLogs("inHistoryList", provider, ccTargetAddr, 0);
+	if(inHistoryList.innerHTML.length == 0) {
+		inHistoryList.innerHTML = T("Found no historical cross-chain transfer//没有找到历史转账记录");
+	}
 	document.getElementById("inHistoryBtn").disabled = false;
 }
 
